--- a/WebContent/css/materialize.css
+++ b/WebContent/css/materialize.css
@@ -4004,7 +4004,7 @@ nav ul a span.badge {
 
 nav {
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #00ffff;
   width: 100%;
   height: 56px;
   line-height: 56px;
