--- a/WebContent/css/theme.css
+++ b/WebContent/css/theme.css
@@ -1,35 +1,93 @@
-#bodyaccueil {width = 60%;
+.bodyaccueil {width = 60%;
 	text-align: center;
 }
 
-#menu {width = 40%;parent { text-align:center;
-	
-}
-
-.footer{
+#menu {width = 40%;
 	text-align: center;
 }
 
-.container_FAQ{
-	
+#footer {
+	text-align: center;
+	position: absolute; bottom : 0;
+	font-size: 13px;
+	bottom: 0; font-size : 13px;
+	width: 100%;
+	padding-top: 50px;
+	height: 50px;
+}
+
+#footer p {
+	text-align: center;
+	position: absolute; bottom : 0;
+	font-size: 13px;
+	bottom: 0; font-size : 13px;
+	width: 100%;
+	padding-top: 50px;
+	height: 50px;
+}
+
+}
+.container_FAQ {
 	
 }
 
-.container_FAQ ul{
+.container_FAQ ul {
 	
 }
 
-.container_FAQ li{
-     display: inline ;	
+.container_FAQ li {
+	display: inline;
 }
 
+.bodyaccueil #map {
+	height: 100%;
+}
 
+/* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+table {
+	width: 100%;
+}
+
+tr th
+      table tbody tr th.bodyaccueil #map {
+	height: 100%;
+	overflow: visible;
+	width: 5px;
+}
+/* Optional: Makes the sample page fill the window. */
 html, body {
 	height: 100%;
-	margin: 0;
-	padding: 0;
 }
 
-#map {
-	height: 100%;
+.bouttonmenuaccueil {
+	background: #3498db;
+	background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+	background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+	background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+	background-image: -o-linear-gradient(top, #3498db, #2980b9);
+	background-image: linear-gradient(to bottom, #3498db, #2980b9);
+	-webkit-border-radius: 21;
+	-moz-border-radius: 21;
+	border-radius: 21px;
+	font-family: Arial;
+	color: #ffffff;
+	font-size: 20px;
+	padding: 10px 20px 10px 18px;
+	text-decoration: none;
+}
+
+.bouttonmenuaccueil:hover {
+	background: #3cb0fd;
+	background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+	text-decoration: none;
+}
+
+.accueilinput {
+	text-align: center;
+	font-size: 30px;
 }
