--- a/WebContent/css/materialize.css
+++ b/WebContent/css/materialize.css
@@ -3,6 +3,19 @@
  * Copyright 2014-2015 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+ 
+@font-face {
+	font-family: 'Amatic SC';
+	src: url('https://fonts.googleapis.com/css?family=Amatic+SC');
+}
+
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+	font-family: 'Amatic SC', cursive;
+	background-image: url("http://www.laboutiquedugrandcirque.fr/857-3490-thickbox/credence-origami.jpg");
+}
+
 .materialize-red {
   background-color: #e51c23 !important;
 }
@@ -2145,14 +2158,7 @@
  * 2. Prevent iOS and IE text size adjust after device orientation change,
  *    without disabling user zoom.
  */
-html {
-  font-family: sans-serif;
-  /* 1 */
-  -ms-text-size-adjust: 100%;
-  /* 2 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
+
 
 /**
  * Remove default margin.
@@ -2349,7 +2355,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+	font-family: 'Amatic SC', cursive;
   font-size: 1em;
 }
 
@@ -2731,7 +2737,7 @@ video.responsive-video {
   color: rgba(255, 255, 255, 0.7);
   vertical-align: top;
   display: inline-block;
-  font-family: 'Material Icons';
+	font-family: 'Amatic SC', cursive;
   font-weight: normal;
   font-style: normal;
   font-size: 25px;
@@ -4008,7 +4014,7 @@ nav {
   width: 100%;
   height: 56px;
   line-height: 56px;
-    font-weight: bold;}
+  font-family: 'Amatic SC', cursive;
 }
 
 nav.nav-extended {
@@ -4256,7 +4262,7 @@ a {
 
 html {
   line-height: 1.5;
-  font-family: "Roboto", sans-serif;
+	font-family: 'Amatic SC', cursive;
   font-weight: normal;
   color: rgba(0, 0, 0, 0.87);
 }
@@ -8240,7 +8246,6 @@ input[type=range]:focus::-ms-fill-upper {
   background: #ffffff;
   font-size: .8em;
   padding: .66em 0;
-  font-weight: bold;
   width: 33%;
   display: inline-block;
   vertical-align: bottom;
