--- a/WebContent/css/theme.css
+++ b/WebContent/css/theme.css
@@ -6,6 +6,7 @@
 	text-align: center;
 }
 
+
 .error {
 	
 	color : red;
@@ -29,7 +30,7 @@
 	bottom: 0;
 	font-size: 13px;
 	font-size : 13px;
-	padding-top: 50px;
+	padding-top: 20px;
 	height: 50px;
 }
 
@@ -90,7 +91,7 @@ html, body {
 	-webkit-border-radius: 21;
 	-moz-border-radius: 21;
 	border-radius: 21px;
-	font-family: Arial;
+	font-family: 'Amatic SC', cursive;
 	color: #ffffff;
 	font-size: 20px;
 	padding: 10px 20px 10px 18px;
@@ -117,9 +118,9 @@ html, body {
 	-webkit-border-radius: 21;
 	-moz-border-radius: 21;
 	border-radius: 21px;
-	font-family: Arial;
+	font-family: 'Amatic SC', cursive;
 	color: #ffffff;
-	font-size: 20px;
+	font-size: 15px;
 	padding: 10px 20px 10px 18px;
 	text-decoration: none;	
 }
@@ -133,6 +134,34 @@ html, body {
 	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
 	text-decoration: none;
 }
+
+#butt-ask-course{
+	background: #3498db;
+	background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+	background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+	background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+	background-image: -o-linear-gradient(top, #3498db, #2980b9);
+	background-image: linear-gradient(to bottom, #3498db, #2980b9);
+	-webkit-border-radius: 21;
+	-moz-border-radius: 21;
+	border-radius: 21px;
+	font-family: 'Amatic SC', cursive;
+	color: #ffffff;
+	font-size: 15px;
+	padding: 10px 20px 10px 18px;
+	text-decoration: none;	
+}
+
+#butt-ask-course:hover {
+	background: #3cb0fd;
+	background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+	text-decoration: none;
+}
+
 
 .accueilinput {
 	text-align: center;
